@@ -247,7 +247,9 @@ A literal percent sign.
 File's path.
 .IP %f
 File's name.
-.IP %u
+.IP "%{urlpath}"
+URL\(hyencoded file path.
+.IP "%u or %{urlname}"
 URL\(hyencoded filename.
 .IP %s
 File's size in bytes.
