@@ -1,3 +1,6 @@
+Sun, 17 Nov 2019 Aleksey
+	* new printf-format token '%{urlpath}' to print url-encoded file path
+
 Fri, 15 Nov 2019 Aleksey
 	* Bugfix: btih in magnet links shall be hex-encoded
 
